# This project name must match the name of the package defined in package.xml
project(thunderbots)

## Build in "Release" (with lots of compiler optimizations) by default
#if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
##    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY VALUE "Release")
#    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY VALUE "Debug")
#endif()

# Force the build to DebugA
# TODO: THIS IS A TEMPORARY FIX TO SUPPRESS THE MEMORY ISSUES FOUND IN
# https://github.com/UBC-Thunderbots/Software/issues/584
# This should be set back to the commented-out code above once the issue if fixed
set_property(CACHE CMAKE_BUILD_TYPE PROPERTY VALUE "Debug")

# For external editor code completion (Visual Studio Code, Vim, etc.)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
# Use PkgConfig to find some packages using pkg_check_modules
find_package(PkgConfig REQUIRED)
include(FindPkgConfig)

####################
## Custom Options ##
####################
option(ENABLE_COVERAGE "Enable code profiling and coverage report analysis" OFF)

####################
## Compiler Flags ##
####################
### Set cmake standard to c++ 17 ###
set(CMAKE_CXX_STANDARD 17)

### Flags to add for debug/release/coverage ###
if(${ENABLE_COVERAGE})
    message(STATUS "Building in Debug with profiling enabled")
    # Add the required flags to build with profiling enabled
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY VALUE "Debug")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-generate -fprofile-arcs -ftest-coverage")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fprofile-arcs")
elseif(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    # Build in release by default if nothing was specified on the command line
    message(STATUS "Building in Release")
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY VALUE "Release")
endif()

### Set compiler flags for all code ###
add_definitions(-Wno-deprecated) # Don't warn about including "old" headers
add_definitions(-fno-common) # Do not allow multiple definitions of the same global variable
add_definitions(-Werror) # Treat warnings as errors, so they don't build up

### Set compiler flags only for cpp code. These flags do not work for C files ###
# Warn if parent classes do not define a virtual destructor
# See https://www.quantstart.com/articles/C-Virtual-Destructors-How-to-Avoid-Memory-Leaks
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wnon-virtual-dtor")



#############################################
## Find and include packages and libraries ##
#############################################

# Call our CMake file to include and build protobuf
include("${CMAKE_CURRENT_SOURCE_DIR}/proto/build_proto.cmake")

# Create a list of files from the shared folder
file(GLOB SHARED_UTIL_SRC LIST_DIRECTORIES false CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/../shared/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/../shared/*.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../shared/*.h
        )

# Find the g3log library, the logger we use for our AI
# See: https://github.com/KjellKod/g3log
SET(G3_LIBRARY_PATH "/usr/local/include")
message("g3log lib path: ${G3_LIBRARY_PATH}")
find_library(G3LOG g3logger PATHS ${G3_LIBRARY_PATH})
if(NOT G3LOG OR NOT EXISTS "${G3LOG}")
    message(FATAL_ERROR "G3LOG library not found")
endif()
message("g3log path: ${G3LOG}")

# Find boost components
find_package(Boost REQUIRED COMPONENTS
        coroutine
        )

## Find catkin macros and libraries
find_package(catkin REQUIRED COMPONENTS
        roscpp
        std_msgs
        message_generation
        thunderbots_msgs
        dynamic_reconfigure
        )

# Get macro for generating dynamic reconfigure files for multiple languages
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/generate_cfgs_from_yaml.cmake")
generate_cfgs_from_yaml()

# Specify the configuration file for dynamic_reconfigure pkg
generate_dynamic_reconfigure_options(
    ${AUTOGENERATED_CFGS}
    )

catkin_package(
        INCLUDE_DIRS
        LIBRARIES thunderbots
        CATKIN_DEPENDS roscpp std_msgs dynamic_reconfigure
        DEPENDS message_runtime
        )

###########
## Build ##
###########

# Specify additional locations of header files
include_directories(SYSTEM
	${catkin_INCLUDE_DIRS}
	)

include_directories(
        ${catkin_INCLUDE_DIRS}
        ${PROTOBUF_INCLUDE_DIRS}
        ${Boost_INCLUDE_DIRS}
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/..
        )

# Find all the generated protobuf source files
file(GLOB PROTO_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/*.pb.cc")

file(GLOB_RECURSE NETWORK_INPUT_SRC LIST_DIRECTORIES false CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/network_input/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/network_input/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/geom/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/geom/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/world/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/world/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/util/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/util/*.cpp
        )
add_executable (network_input
        ${PROTO_SRCS}
        ${NETWORK_INPUT_SRC}
        ${SHARED_UTIL_SRC}
        )
# Depend on exported targets (other packages) so that the messages in our thunderbots_msgs package are built first.
# This way the message headers are always generated before they are used in compilation here.
add_dependencies(network_input ${catkin_EXPORTED_TARGETS})
target_link_libraries(network_input
        ${catkin_LIBRARIES}
        ${PROTOBUF_LIBRARIES}
        ${G3LOG}
        )

file(GLOB_RECURSE AI_LOGIC_SRC LIST_DIRECTORIES false CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/geom/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/geom/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/util/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/util/*.cpp
        )
add_executable (ai_logic
        ${AI_LOGIC_SRC}
        ${SHARED_UTIL_SRC}
	)

# Depend on exported targets (other packages) so that the messages in our thunderbots_msgs package are built first.
# This way the message headers are always generated before they are used in compilation here.
add_dependencies(ai_logic ${catkin_EXPORTED_TARGETS})
target_link_libraries(ai_logic ${catkin_LIBRARIES}
        ${Boost_LIBRARIES}
        ${G3LOG}
        )

file(GLOB_RECURSE GRSIM_COMMUNICATION_SRC LIST_DIRECTORIES false CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/grsim_communication/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/grsim_communication/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/primitive/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/primitive/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/world/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/world/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/geom/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/geom/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/util/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/util/*.cpp
        )
add_executable (grsim_communication
        ${PROTO_SRCS}
        ${GRSIM_COMMUNICATION_SRC}
        ${SHARED_UTIL_SRC}
        )

# Depend on exported targets (other packages) so that the messages in our thunderbots_msgs package are built first.
# This way the message headers are always generated before they are used in compilation here.
add_dependencies(grsim_communication ${catkin_EXPORTED_TARGETS})
target_link_libraries(grsim_communication ${catkin_LIBRARIES}
        ${PROTOBUF_LIBRARIES}
        ${G3LOG}
        )

file(GLOB_RECURSE RADIO_COMMUNICATION_SRC LIST_DIRECTORIES false CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/radio_communication/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/radio_communication/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/primitive/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/primitive/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/world/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/world/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/util/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/util/*.cpp
        )
add_executable (radio_communication
        ${RADIO_COMMUNICATION_SRC}
        ${SHARED_UTIL_SRC}
        )
# Depend on exported targets (other packages) so that the messages in our thunderbots_msgs package are built first.
# This way the message headers are always generated before they are used in compilation here.
add_dependencies(radio_communication ${catkin_EXPORTED_TARGETS})

##### LIBUSB #####
pkg_search_module("LIBUSB_1" REQUIRED "libusb-1.0")
include_directories(SYSTEM "${LIBUSB_1_INCLUDE_DIRS}")
link_directories("${LIBUSB_1_LIBRARY_DIRS}")
add_definitions("${LIBUSB_1_DEFINITIONS}")

##### SIGC++  ######
pkg_search_module("SIGC" REQUIRED "sigc++-2.0")
include_directories(SYSTEM "${SIGC_INCLUDE_DIRS}")
link_directories("${SIGC_LIBRARY_DIRS}")

target_link_libraries(radio_communication ${catkin_LIBRARIES}
        ${G3LOG}
        ${LIBUSB_1_LIBRARIES}
        ${SIGC_LIBRARIES}
        )

    file(GLOB_RECURSE DYNAMIC_RECONFIGURE_SERVER_HOST_NODE LIST_DIRECTORIES false CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/dynamic_reconfigure_manager/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/util/parameter/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/util/parameter/*.cpp
        )
add_executable (parameters
        ${PROTO_SRCS}
        ${DYNAMIC_RECONFIGURE_SERVER_HOST_NODE}
        ${SHARED_UTIL_SRC}
        )
# Depend on exported targets (other packages) so that the messages in our thunderbots_msgs package are built first.
# This way the message headers are always generated before they are used in compilation here.
add_dependencies(parameters thunderbots_gencfg ${catkin_EXPORTED_TARGETS})
target_link_libraries(parameters  ${catkin_LIBRARIES}
        ${PROTOBUF_LIBRARIES}
        )

file(GLOB_RECURSE XBOX_CONTROLLER_MAPPING_SRC LIST_DIRECTORIES false CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/xbox_controller_mapping/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/primitive/direct_velocity_primitive.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/primitive/kick_primitive.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/primitive/chip_primitive.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/primitive/primitive.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ai/world/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/util/parameter/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/util/parameter/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/util/time/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/util/ros_messages.cpp
        )
add_executable (xbox_controller_mapping
        ${XBOX_CONTROLLER_MAPPING_SRC}
        ${SHARED_UTIL_SRC}
        )
# Depend on exported targets (other packages) so that the messages in our thunderbots_msgs package are built first.
# This way the message headers are always generated before they are used in compilation here.
add_dependencies(xbox_controller_mapping ${catkin_EXPORTED_TARGETS})
target_link_libraries(xbox_controller_mapping
        ${catkin_LIBRARIES}
        )


#############
## Testing ##
#############

###### IMPORTANT #####

## DO NOT USE GLOBBING FOR TEST EXECUTABLES. SPECIFY EACH SOURCE FILE. ##
# This is to make sure we know exactly what files/interfaces are being tested and that we are not accidentally
# picking up other files that may affect test behaviour. Unit tests should not need too many files to be specified
# and we want to make sure the minimum set of files required for the test are being used.

## Why We Have Tests Grouped ##
# When you build a test executable (or any executable) with cmake, it does not
# save any `.o` files it might have already built for other executables. That
# means if I require `move_primitive.cpp` for two test executables, CMake will
# build it _twice_. This has lead to a heck of a lot of build duplication in our
# system. See this PR for the original change in this direction:
# https://github.com/UBC-Thunderbots/Software/pull/386

##### Unit Tests #####

## Add gtest based cpp test target and link libraries
if (CATKIN_ENABLE_TESTING)
    #gtest
    catkin_add_gtest(geom_angle_test
            test/geom/angle.cpp
            geom/angle.h
            )
    target_link_libraries(geom_angle_test ${catkin_LIBRARIES})

    catkin_add_gtest(geom_point_test
            test/geom/point.cpp
            geom/point.h
            )
    target_link_libraries(geom_point_test ${catkin_LIBRARIES})

    catkin_add_gtest(geom_util_test
            test/geom/util.cpp
            geom/util.cpp
            geom/util.h
            geom/point.h
            geom/angle.h
            geom/segment.h
            geom/ray.h
            geom/circle.h
            geom/line.h)

    target_link_libraries(geom_util_test ${catkin_LIBRARIES})

    catkin_add_gtest(nav_util_test
            test/ai/navigator/util.cpp
            ai/navigator/util.cpp
            ai/navigator/util.h
            geom/point.h)

    target_link_libraries(nav_util_test ${catkin_LIBRARIES})

    catkin_add_gtest(shared_util_test
            ../shared/test/util.cpp
            ../shared/util.c
            ../shared/util.h)

    target_link_libraries(shared_util_test ${catkin_LIBRARIES})

    catkin_add_gtest(ros_message_util_test
            ai/world/ball.cpp
            ai/world/field.cpp
            ai/world/game_state.cpp
            ai/world/robot.cpp
            ai/world/team.cpp
            ai/world/world.cpp
            geom/angle.h
            geom/point.h
            test/util/ros_messages.cpp
            util/parameter/dynamic_parameters.cpp
            util/ros_messages.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            )

    target_link_libraries(ros_message_util_test ${catkin_LIBRARIES})

    catkin_add_gtest(world_test
            ai/world/ball.cpp
            ai/world/field.cpp
            ai/world/game_state.cpp
            ai/world/robot.cpp
            ai/world/team.cpp
            ai/world/world.cpp
            test/ai/world/ball.cpp
            test/ai/world/field.cpp
            test/ai/world/game_state.cpp
            test/ai/world/main.cpp
            test/ai/world/robot.cpp
            test/ai/world/team.cpp
            test/ai/world/world.cpp
            test/test_util/test_util.cpp
            util/parameter/dynamic_parameters.cpp
            util/parameter/dynamic_parameter_utils.cpp
            util/refbox_constants.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            )
    target_link_libraries(world_test ${catkin_LIBRARIES})


    catkin_add_gtest(test_util_test
            test/test_util/test_util_test.cpp
            test/test_util/test_util.cpp
            ai/world/world.cpp
            ai/world/ball.cpp
            ai/world/field.cpp
            ai/world/robot.cpp
            ai/world/team.cpp
            ai/world/game_state.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            util/parameter/dynamic_parameters.cpp
            )

    target_link_libraries(test_util_test ${catkin_LIBRARIES})

    catkin_add_gtest(grsim_communication_test
            ${PROTO_SRCS}
            ai/primitive/catch_primitive.cpp
            ai/primitive/chip_primitive.cpp
            ai/primitive/direct_velocity_primitive.cpp
            ai/primitive/direct_wheels_primitive.cpp
            ai/primitive/dribble_primitive.cpp
            ai/primitive/kick_primitive.cpp
            ai/primitive/move_primitive.cpp
            ai/primitive/movespin_primitive.cpp
            ai/primitive/pivot_primitive.cpp
            ai/primitive/primitive.cpp
            ai/primitive/stop_primitive.cpp
            ai/world/ball.cpp
            ai/world/field.cpp
            ai/world/game_state.cpp
            ai/world/robot.cpp
            ai/world/team.cpp
            ai/world/world.cpp
            geom/util.cpp
            grsim_communication/grsim_backend.cpp
            grsim_communication/grsim_command_primitive_visitor.cpp
            grsim_communication/motion_controller.cpp
            test/grsim_communication/dribble_primitive.cpp
            test/grsim_communication/grsim_backend.cpp
            test/grsim_communication/catch_primitive.cpp
            test/grsim_communication/pivot_primitive.cpp
            test/grsim_communication/movespin_primitive.cpp
            test/grsim_communication/main.cpp
            test/grsim_communication/motion_controller.cpp
            test/test_util/test_util.cpp
            util/parameter/dynamic_parameters.cpp
            util/ros_messages.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            )
    target_link_libraries(grsim_communication_test ${catkin_LIBRARIES}
            ${PROTOBUF_LIBRARIES}
            ${G3LOG}
            )

    catkin_add_gtest(primitive_test
            ai/primitive/catch_primitive.cpp
            ai/primitive/chip_primitive.cpp
            ai/primitive/direct_velocity_primitive.cpp
            ai/primitive/direct_wheels_primitive.cpp
            ai/primitive/dribble_primitive.cpp
            ai/primitive/kick_primitive.cpp
            ai/primitive/move_primitive.cpp
            ai/primitive/movespin_primitive.cpp
            ai/primitive/pivot_primitive.cpp
            ai/primitive/primitive.cpp
            ai/primitive/primitive_factory.cpp
            ai/primitive/stop_primitive.cpp
            test/ai/primitive/catch_primitive.cpp
            test/ai/primitive/chip_primitive.cpp
            test/ai/primitive/direct_velocity_primitive.cpp
            test/ai/primitive/direct_wheels_primitive.cpp
            test/ai/primitive/dribble_primitive.cpp
            test/ai/primitive/kick_primitive.cpp
            test/ai/primitive/move_primitive.cpp
            test/ai/primitive/movespin_primitive.cpp
            test/ai/primitive/pivot_primitive.cpp
            test/ai/primitive/primitive.cpp
            test/ai/primitive/primitive_factory.cpp
            test/ai/primitive/stop_primitive.cpp
            test/ai/primitive/main.cpp
            )

    target_link_libraries(primitive_test ${catkin_LIBRARIES}
            ${G3LOG})


    catkin_add_gtest(mrf_primitive_visitor_test
            test/radio_communication/visitor/mrf_primitive_visitor.cpp
            radio_communication/visitor/mrf_primitive_visitor.cpp
            ai/primitive/catch_primitive.cpp
            ai/primitive/chip_primitive.cpp
            ai/primitive/direct_velocity_primitive.cpp
            ai/primitive/dribble_primitive.cpp
            ai/primitive/kick_primitive.cpp
            ai/primitive/pivot_primitive.cpp
            ai/primitive/move_primitive.cpp
            ai/primitive/movespin_primitive.cpp
            ai/primitive/stop_primitive.cpp
            ai/primitive/direct_wheels_primitive.cpp
            ai/primitive/primitive.cpp
            )
    target_link_libraries(mrf_primitive_visitor_test ${catkin_LIBRARIES}
            ${G3LOG})

    catkin_add_gtest(time_test
            test/util/time/duration.cpp
            test/util/time/main.cpp
            test/util/time/timestamp.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            )
    target_link_libraries(time_test ${catkin_LIBRARIES})

    catkin_add_gtest(shared_evaluation_test
            ai/world/robot.cpp
            ai/evaluation/pass.cpp
            test/ai/evaluation/pass.cpp
            test/ai/evaluation/main.cpp
            util/time/timestamp.cpp
            util/time/duration.cpp
            util/time/time.cpp
            )
    target_link_libraries(shared_evaluation_test ${catkin_LIBRARIES})

    catkin_add_gtest(ai_evaluation_test
            ai/evaluation/pass.cpp
            ai/hl/stp/evaluation/ball.cpp
            ai/hl/stp/evaluation/calc_best_shot.cpp
            ai/hl/stp/evaluation/possession.cpp
            ai/hl/stp/evaluation/enemy_threat.cpp
            ai/hl/stp/evaluation/deflect_off_enemy_target.cpp
            ai/hl/stp/evaluation/indirect_chip.cpp
            ai/hl/stp/evaluation/intercept.cpp
            ai/hl/stp/evaluation/robot.cpp
            ai/hl/stp/evaluation/team.cpp
            ai/world/ball.cpp
            ai/world/field.cpp
            ai/world/game_state.cpp
            ai/world/robot.cpp
            ai/world/team.cpp
            ai/world/world.cpp
            geom/rectangle.cpp
            geom/util.cpp
            test/ai/hl/stp/evaluation/indirect_chip.cpp
            test/ai/hl/stp/evaluation/calc_best_shot.cpp
            test/ai/hl/stp/evaluation/ball.cpp
            test/ai/hl/stp/evaluation/possession.cpp
            test/ai/hl/stp/evaluation/enemy_threat.cpp
            test/ai/hl/stp/evaluation/deflect_off_enemy_target.cpp
            test/ai/hl/stp/evaluation/main.cpp
            test/ai/hl/stp/evaluation/intercept.cpp
            test/ai/hl/stp/evaluation/robot.cpp
            test/ai/hl/stp/evaluation/team.cpp
            test/test_util/test_util.cpp
            util/parameter/dynamic_parameter_utils.cpp
            util/parameter/dynamic_parameters.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            )
    target_link_libraries(ai_evaluation_test ${catkin_LIBRARIES})

    catkin_add_gtest(action_test
            ai/hl/stp/action/action.cpp
            ai/hl/stp/action/chip_action.cpp
            ai/hl/stp/action/dribble_action.cpp
            ai/hl/stp/action/kick_action.cpp
            ai/hl/stp/action/move_action.cpp
            ai/hl/stp/action/movespin_action.cpp
            ai/hl/stp/action/pivot_action.cpp
            ai/hl/stp/action/stop_action.cpp
            ai/intent/intent.cpp
            ai/intent/chip_intent.cpp
            ai/intent/dribble_intent.cpp
            ai/intent/kick_intent.cpp
            ai/intent/move_intent.cpp
            ai/intent/movespin_intent.cpp
            ai/intent/pivot_intent.cpp
            ai/intent/stop_intent.cpp
            ai/intent/kick_intent.cpp
            ai/intent/chip_intent.cpp
            ai/primitive/move_primitive.cpp
            ai/primitive/movespin_primitive.cpp
            ai/primitive/pivot_primitive.cpp
            ai/primitive/kick_primitive.cpp
            ai/primitive/chip_primitive.cpp
            ai/primitive/stop_primitive.cpp
            ai/primitive/primitive.cpp
            ai/primitive/dribble_primitive.cpp
            ai/world/robot.cpp
            ai/world/ball.cpp
            test/ai/hl/stp/action/main.cpp
            test/ai/hl/stp/test_actions/move_test_action.cpp
            test/ai/hl/stp/action/action.cpp
            test/ai/hl/stp/action/chip_action.cpp
            test/ai/hl/stp/action/dribble_action.cpp
            test/ai/hl/stp/action/kick_action.cpp
            test/ai/hl/stp/action/move_action.cpp
            test/ai/hl/stp/action/movespin_action.cpp
            test/ai/hl/stp/action/pivot_action.cpp
            test/ai/hl/stp/action/stop_action.cpp
            geom/polygon.cpp
            geom/util.cpp
            util/logger/custom_g3log_sinks.h
            util/logger/init.h
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            )
    target_link_libraries(action_test
            ${catkin_LIBRARIES}
            ${G3LOG}
            ${Boost_LIBRARIES}
            )

    catkin_add_gtest(tactic_test
            ai/evaluation/pass.cpp
            ai/hl/stp/action/action.cpp
            ai/hl/stp/action/kick_action.cpp
            ai/hl/stp/action/move_action.cpp
            ai/hl/stp/evaluation/calc_best_shot.cpp
            ai/hl/stp/tactic/block_shot_path_tactic.cpp
            ai/hl/stp/tactic/cherry_pick_tactic.cpp
            ai/hl/stp/tactic/move_tactic.cpp
            ai/hl/stp/tactic/passer_tactic.cpp
            ai/hl/stp/tactic/receiver_tactic.cpp
            ai/hl/stp/tactic/tactic.cpp
            ai/intent/intent.cpp
            ai/intent/kick_intent.cpp
            ai/intent/move_intent.cpp
            ai/passing/evaluation.cpp
            ai/passing/pass.cpp
            ai/passing/pass_generator.cpp
            ai/primitive/kick_primitive.cpp
            ai/primitive/move_primitive.cpp
            ai/primitive/primitive.cpp
            ai/world/ball.cpp
            ai/world/field.cpp
            ai/world/game_state.cpp
            ai/world/robot.cpp
            ai/world/team.cpp
            ai/world/world.cpp
            geom/polygon.cpp
            geom/util.cpp
            test/ai/hl/stp/tactic/block_shot_path_tactic.cpp
            test/ai/hl/stp/tactic/cherry_pick_tactic.cpp
            test/ai/hl/stp/tactic/main.cpp
            test/ai/hl/stp/tactic/move_tactic.cpp
            test/ai/hl/stp/tactic/passer_tactic.cpp
            test/ai/hl/stp/tactic/receiver_tactic.cpp
            test/ai/hl/stp/tactic/tactic.cpp
            test/ai/hl/stp/test_tactics/move_test_tactic.cpp
            test/test_util/test_util.cpp
            util/canvas_messenger/canvas_messenger.cpp
            util/logger/custom_g3log_sinks.h
            util/logger/init.h
            util/math_functions.cpp
            util/parameter/dynamic_parameters.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            )
    target_link_libraries(tactic_test
            ${catkin_LIBRARIES}
            ${G3LOG}
            ${Boost_LIBRARIES})

    catkin_add_gtest(play_test
            ai/evaluation/pass.cpp
            ai/hl/stp/action/action.cpp
            ai/hl/stp/action/move_action.cpp
            ai/hl/stp/evaluation/calc_best_shot.cpp
            ai/hl/stp/play/example_play.cpp
            ai/hl/stp/play/play.cpp
            ai/hl/stp/play/play_factory.cpp
            ai/hl/stp/tactic/move_tactic.cpp
            ai/hl/stp/tactic/tactic.cpp
            ai/intent/intent.cpp
            ai/intent/move_intent.cpp
            ai/intent/stop_intent.cpp
            ai/passing/evaluation.cpp
            ai/passing/pass.cpp
            ai/passing/pass_generator.cpp
            ai/primitive/move_primitive.cpp
            ai/primitive/primitive.cpp
            ai/primitive/stop_primitive.cpp
            ai/world/ball.cpp
            ai/world/field.cpp
            ai/world/game_state.cpp
            ai/world/robot.cpp
            ai/world/team.cpp
            ai/world/world.cpp
            geom/util.cpp
            test/ai/hl/stp/play/example_play.cpp
            test/ai/hl/stp/play/main.cpp
            test/ai/hl/stp/play/play_factory.cpp
            test/ai/hl/stp/test_plays/move_test_play.cpp
            test/ai/hl/stp/test_plays/stop_test_play.cpp
            test/ai/hl/stp/test_tactics/move_test_tactic.cpp
            test/ai/hl/stp/test_tactics/stop_test_tactic.cpp
            test/test_util/test_util.cpp
            util/canvas_messenger/canvas_messenger.cpp
            util/logger/custom_g3log_sinks.h
            util/logger/init.h
            util/math_functions.cpp
            util/parameter/dynamic_parameters.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            )
    target_link_libraries(play_test
            ${catkin_LIBRARIES}
            ${G3LOG}
            ${Boost_LIBRARIES})

    catkin_add_gtest(stp_test
            ai/hl/stp/stp.cpp
            ai/hl/stp/tactic/tactic.cpp
            test/ai/hl/stp/test_tactics/move_test_tactic.cpp
            test/ai/hl/stp/test_tactics/stop_test_tactic.cpp
            ai/hl/stp/play/play.cpp
            ai/hl/stp/play/play_factory.cpp
            test/ai/hl/stp/test_plays/move_test_play.cpp
            test/ai/hl/stp/test_plays/stop_test_play.cpp
            ai/intent/intent.cpp
            ai/intent/move_intent.cpp
            ai/intent/stop_intent.cpp
            ai/primitive/primitive.cpp
            ai/primitive/move_primitive.cpp
            ai/primitive/stop_primitive.cpp
            ai/world/ball.cpp
            ai/world/field.cpp
            ai/world/game_state.cpp
            ai/world/robot.cpp
            ai/world/team.cpp
            ai/world/world.cpp
            test/ai/hl/stp/main.cpp
            test/ai/hl/stp/stp.cpp
            test/ai/hl/stp/stp_tactic_assignment.cpp
            util/parameter/dynamic_parameters.cpp
            util/time/timestamp.cpp
            util/time/duration.cpp
            util/time/time.cpp
            geom/util.cpp
            test/test_util/test_util.cpp
            )
    target_link_libraries(stp_test
            ${catkin_LIBRARIES}
            ${G3LOG}
            ${Boost_LIBRARIES})

    catkin_add_gtest(intent_test
            ai/intent/catch_intent.cpp
            ai/intent/chip_intent.cpp
            ai/intent/direct_velocity_intent.cpp
            ai/intent/direct_wheels_intent.cpp
            ai/intent/dribble_intent.cpp ai/intent/intent.cpp
            ai/intent/kick_intent.cpp
            ai/intent/move_intent.cpp
            ai/intent/movespin_intent.cpp
            ai/intent/pivot_intent.cpp
            ai/intent/stop_intent.cpp
            ai/primitive/catch_primitive.cpp
            ai/primitive/chip_primitive.cpp
            ai/primitive/direct_velocity_primitive.cpp
            ai/primitive/direct_wheels_primitive.cpp
            ai/primitive/dribble_primitive.cpp
            ai/primitive/kick_primitive.cpp
            ai/primitive/move_primitive.cpp
            ai/primitive/movespin_primitive.cpp
            ai/primitive/pivot_primitive.cpp
            ai/primitive/primitive.cpp
            ai/primitive/stop_primitive.cpp
            test/ai/intent/catch_intent.cpp
            test/ai/intent/chip_intent.cpp
            test/ai/intent/direct_velocity_intent.cpp
            test/ai/intent/direct_wheels_intent.cpp
            test/ai/intent/dribble_intent.cpp
            test/ai/intent/intent.cpp
            test/ai/intent/kick_intent.cpp
            test/ai/intent/main.cpp
            test/ai/intent/move_intent.cpp
            test/ai/intent/movespin_intent.cpp
            test/ai/intent/pivot_intent.cpp
            test/ai/intent/stop_intent.cpp
            )
    target_link_libraries(intent_test
            ${G3LOG}
            ${catkin_LIBRARIES}
            )

    catkin_add_gtest(passing_test
            ai/evaluation/pass.cpp
            ai/passing/evaluation.cpp
            ai/passing/pass.cpp
            ai/passing/pass_generator.cpp
            ai/world/ball.cpp
            ai/world/field.cpp
            ai/world/game_state.cpp
            ai/world/robot.cpp
            ai/world/team.cpp
            ai/world/world.cpp
            geom/util.cpp
            test/ai/passing/evaluation.cpp
            test/ai/passing/main.cpp
            test/ai/passing/pass.cpp
            test/ai/passing/pass_generator.cpp
            test/test_util/test_util.cpp
            util/canvas_messenger/canvas_messenger.cpp
            util/math_functions.cpp
            util/parameter/dynamic_parameters.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            )
    target_link_libraries(passing_test ${catkin_LIBRARIES})

    catkin_add_gtest(gradient_descent_optimizer_test
            test/util/gradient_descent_optimizer.cpp
            )
    target_link_libraries(gradient_descent_optimizer_test ${catkin_LIBRARIES})

    catkin_add_gtest(math_functions_test
            test/util/math_functions.cpp
            util/math_functions.cpp
            )
    target_link_libraries(math_functions_test ${catkin_LIBRARIES})

    catkin_add_gtest(evaluation_detect_threat_test
            test/ai/hl/stp/evaluation/detect_threat.cpp
            ai/hl/stp/evaluation/detect_threat.cpp
            test/test_util/test_util.cpp
            ai/world/ball.cpp
            ai/world/field.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            util/time/duration.cpp
            geom/util.cpp
            ai/world/team.cpp
            ai/world/world.cpp
            ai/world/robot.cpp
            ai/world/game_state.cpp
            util/parameter/dynamic_parameters.cpp
            )

    target_link_libraries(evaluation_detect_threat_test ${catkin_LIBRARIES})

    catkin_add_gtest(navigator_test
            ai/intent/catch_intent.cpp
            ai/intent/chip_intent.cpp
            ai/intent/direct_velocity_intent.cpp
            ai/intent/direct_wheels_intent.cpp
            ai/intent/dribble_intent.cpp
            ai/intent/intent.cpp
            ai/intent/kick_intent.cpp
            ai/intent/move_intent.cpp
            ai/intent/movespin_intent.cpp
            ai/intent/pivot_intent.cpp
            ai/intent/stop_intent.cpp
            ai/navigator/placeholder_navigator/placeholder_navigator.cpp
            ai/primitive/catch_primitive.cpp
            ai/primitive/chip_primitive.cpp
            ai/primitive/direct_velocity_primitive.cpp
            ai/primitive/direct_wheels_primitive.cpp
            ai/primitive/dribble_primitive.cpp
            ai/primitive/kick_primitive.cpp
            ai/primitive/move_primitive.cpp
            ai/primitive/movespin_primitive.cpp
            ai/primitive/pivot_primitive.cpp
            ai/primitive/primitive.cpp
            ai/primitive/stop_primitive.cpp
            ai/world/ball.cpp
            ai/world/field.cpp
            ai/world/game_state.cpp
            ai/world/robot.cpp
            ai/world/team.cpp
            ai/world/world.cpp
            test/ai/navigator/main.cpp
            test/ai/navigator/placeholder_navigator/placeholder_navigator.cpp
            test/test_util/test_util.cpp
            test/ai/navigator/obstacle/obstacle.cpp
            test/ai/navigator/trespass/trespass.cpp
            test/ai/navigator/path_planner/straight_line_path_planner.cpp
            util/parameter/dynamic_parameter_utils.cpp
            util/parameter/dynamic_parameters.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            util/math_functions.cpp
            geom/angle.h
            geom/point.h
            geom/polygon.h
            geom/polygon.cpp
            geom/util.h
            geom/util.cpp
            ../shared/constants.h
            ai/navigator/obstacle/obstacle.cpp
            ai/navigator/obstacle/obstacle.h
            ai/navigator/trespass.cpp
            ai/navigator/path_planner/straight_line_path_planner.cpp
            )
    target_link_libraries(navigator_test
            ${catkin_LIBRARIES}
            ${G3LOG}
            )

    catkin_add_gtest(polygon_test
            test/geom/polygon.cpp
            geom/polygon.cpp
            geom/util.cpp)

    target_link_libraries(polygon_test
            ${catkin_LIBRARIES}
            ${G3LOG})


    catkin_add_gtest(robot_filter_test
            test/network_input/filter/robot_filter.cpp
            test/network_input/filter/main.cpp
            network_input/filter/robot_filter.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            ai/world/robot.cpp
            )
    target_link_libraries(robot_filter_test
            ${catkin_LIBRARIES}
            ${G3LOG}
            )
    
endif()

##### ROSTests / Integration Tests #####

if (CATKIN_ENABLE_TESTING)
    find_package(rostest REQUIRED)

    # The test node that verifies the logger is working correctly
    add_rostest_gtest(logger_test test/util/logger_test.test
            util/logger/custom_g3log_sinks.h
            util/logger/init.h
            test/util/logger_test.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            )
    target_link_libraries(logger_test ${catkin_LIBRARIES}
            ${G3LOG})

    # The test node that verifies the rostest utils are working correctly
    add_rostest_gtest(rostest_util_test test/test_util/rostest_util_test.test
            test/test_util/rostest_util_test.cpp
            util/time/duration.cpp
            util/time/time.cpp
            util/time/timestamp.cpp
            )
    target_link_libraries(rostest_util_test ${catkin_LIBRARIES})

     # The test node that verifies the dynamic_parameters are working
    add_rostest_gtest(dynamic_parameters_test test/util/rostest_dynamic_parameters.test
            test/util/test_dynamic_parameters.cpp
            util/parameter/dynamic_parameters.cpp
            util/parameter/dynamic_parameter_utils.cpp
            )
    target_link_libraries(dynamic_parameters_test ${catkin_LIBRARIES})

     # The test node that verifies the dynamic_parameters exist in the parameter server
    add_rostest_gtest(check_parameter_existance_test test/util/rostest_parameter_exists.test
            test/util/test_parameter_exists.cpp
            util/parameter/dynamic_parameters.cpp
            util/parameter/dynamic_parameter_utils.cpp
            )
    target_link_libraries(check_parameter_existance_test ${catkin_LIBRARIES})

endif()
